--- a/index.html
+++ b/index.html
@@ -1,41 +1,67 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
     <script src="js/jquery-3.2.0.js"></script>
     <script src="js/scripts.js"></script>
+
     <title>Celebrity Dating Quiz</title>
   </head>
   <body>
+
     <div class="container">
     <h1>Celebrity Dating Quiz</h1>
-    <h2>What is your gender?</h2>
-    <form id="add">
-    <select class="form-control" id="gender">
-      <option>Male</option>
-      <option>Female</option>
-    </select>
-    <h2>What is your ideal setting?</h2>
-    <select class="form-control" id="setting">
-      <option>Beach</option>
-      <option>Mountain</option>
-      <option>City</option>
-    </select>
-    <h2>Favorite ice cream flavor</h2>
-    <select class="form-control" id="iceCream">
-      <option>Chocolate</option>
-      <option>Vanilla</option>
-      <option>Strawberry</option>
-    </select>
-    <h2>Favorite color</h2>
-    <select class="form-control" id="color">
-      <option>Red</option>
-      <option>Green</option>
-      <option>Blue</option>
-    </select>
-    <button type="submit" name="btn">Find out your Celebrity match!</button>
-  </form>
+
+
+    <form id="form">
+      <div class="form-group">
+        <label for="gender">Are you male or Female?</label>
+        <input id="gender" class ="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="color">Choose the color: red or blue?</label>
+        <input id="color" class ="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="setting">Where would you prefer to live:  city or mountains?</label>
+        <input id="setting" class ="form-control" type="text">
+      </div>
+      <button type="submit" class="btn">Find out your Celebrity match!</button>
+      </div>
+    </form>
+
+
+
+  <h2 id="select">You Selected: </h2>
+  <div class="adam">
+    <h3>Adam Sandler</h3>
+    <img src="img/adam.jpg">
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    </p>
     </div>
+    <div class="ray">
+      <h3>Ray Romano</h3>
+      <img src="img/ray.jpg">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
+      </div>
+      <div class="tina">
+        <h3>Tina Fey</h3>
+        <img src="img/liz.jpg">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+        </div>
+        <div class="amy">
+          <h3>Amy Poehler</h3>
+          <img src="img/amy.jpg">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+          </div>
+
   </body>
 </html>
